--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
   <body>
     <div class="container mt-5">
       <h1>Customer Value Proposition</h1>
-      <p class="lead">
-        Sleep de blokjes in de volgorde van prioriteit: links hoogste, rechts
-        laagste prioriteit
-      </p>
+      <p class="lead">Schik de blokjes naar volgorde van prioriteit.</p>
       <main></main>
     </div>
     <script src="sketch.js"></script>
